# Fullstack-retrieval-augmented-generation

./: .gitignore  README.md  package-lock.json  pyproject.toml
app/: rag_chain.py  server.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
rag-data-loader/: rag_load_and_process.py
